@@ -150,6 +150,7 @@ Input is read from filedescriptor \fBnumber\fR or output is written to
 .IP "a:	atime"
 .IP "c:	ctime"
 .IP "S:	check for growing size"
+.IP "I:	check by inode instead of filename"
 .IP "md5:	md5 checksum"
 .IP "sha1:	sha1 checksum"
 .IP "rmd160:     rmd160 checksum"
